Added player name label

--- a/views/instructions.html
+++ b/views/instructions.html
@@ -1,3 +1,12 @@
 <p>
-    TODO: Put something here.
+    Controls:
 </p>
+<ul>
+    <li><strong>Arrow keys or WASD</strong> = Move player</li>
+    <li><strong>Return</strong> = Chat</li>
+</ul>
+<p>
+    If you die, your account will be permanently deactivated.
+</p>
+
+
